feat: 解析下载规则完善