@@ -1,3 +1,5 @@
+import com.unclezs.novel.app.main.spi.WebEngineHttpClient;
+
 /**
  * @author blog.unclezs.com
  * @date 2021/04/03 17:44
@@ -22,6 +24,19 @@ open module com.unclezs.novel.app.main {
   requires static lombok;
   requires freemarker;
   requires jkeymaster;
+  provides com.unclezs.novel.analyzer.request.spi.HttpProvider with WebEngineHttpClient;
 
   exports com.unclezs.novel.app.main;
 }
+
+// compiler
+// --add-exports=javafx.graphics/com.sun.javafx.css=com.unclezs.novel.app.framework
+// --add-exports=javafx.graphics/com.sun.javafx.stage=com.unclezs.novel.app.main,com.jfoenix
+// --add-exports=javafx.graphics/com.sun.javafx.scene=com.jfoenix
+// --add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix
+// --add-exports=javafx.base/com.sun.javafx.event=com.jfoenix
+// --add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix
+// --add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix
+
+// runtime
+// --add-opens=com.jfoenix/com.jfoenix.controls=com.unclezs.novel.app.framework
